@@ -24,3 +24,6 @@
 #define uthash_malloc(sz) _mosquitto_malloc(sz)
 #define uthash_free(ptr,sz) _mosquitto_free(ptr)
 
+#ifndef EPROTO
+#  define EPROTO ECONNABORTED
+#endif
