@@ -81,6 +81,8 @@ Contributors:
 #include <time_mosq.h>
 #include <util_mosq.h>
 
+#include "config.h"
+
 #ifdef WITH_TLS
 int tls_ex_index_mosq = -1;
 #endif
