@@ -21,6 +21,7 @@ Contributors:
 #  include <ws2tcpip.h>
 #else
 #  include <arpa/inet.h>
+#  include <sys/socket.h>
 #endif
 
 #include <string.h>
